[gd_scene load_steps=13 format=2]

[ext_resource path="res://Audio/zapsplat_office_design_folder_a2_size_plastic_page_flip_finger_turn_001_99830.mp3" type="AudioStream" id=1]
[ext_resource path="res://scripts/CookBook.gd" type="Script" id=2]
[ext_resource path="res://images/Open-book-clip-art-template-free-clipart-images-4.png" type="Texture" id=3]
[ext_resource path="res://images/arrow.png" type="Texture" id=4]
[ext_resource path="res://images/page4.png" type="Texture" id=5]
[ext_resource path="res://images/arrow bitmap.png" type="BitMap" id=6]
[ext_resource path="res://images/page2.png" type="Texture" id=7]
[ext_resource path="res://images/page1.png" type="Texture" id=8]
[ext_resource path="res://images/page3.png" type="Texture" id=9]
[ext_resource path="res://images/page5.png" type="Texture" id=10]
[ext_resource path="res://Audio/zapsplat_household_book_slide_into_bookshelf_001_68196.mp3" type="AudioStream" id=11]
[ext_resource path="res://Audio/zapsplat_household_book_manual_large_close_59654.mp3" type="AudioStream" id=12]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CookBook" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Book" type="Sprite" parent="CookBook"]
position = Vector2( -256, 288 )
scale = Vector2( 1.63193, 1.63193 )
texture = ExtResource( 3 )

[node name="ClipController" type="Control" parent="CookBook/Book"]
anchor_left = 0.025
anchor_top = 0.091
anchor_right = 0.975
anchor_bottom = 0.952
margin_left = -149.475
margin_top = -113.748
margin_right = -149.525
margin_bottom = -114.056
rect_min_size = Vector2( 284, 196 )
rect_clip_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="CookBook/Book/ClipController"]
margin_right = 876.0
margin_bottom = 200.0
rect_min_size = Vector2( 284, 196 )
rect_scale = Vector2( 0.63, 0.63 )
custom_constants/separation = 12

[node name="TextureRect" type="TextureRect" parent="CookBook/Book/ClipController/HBoxContainer"]
margin_right = 216.0
margin_bottom = 200.0
texture = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="CookBook/Book/ClipController/HBoxContainer"]
margin_left = 228.0
margin_right = 444.0
margin_bottom = 200.0
texture = ExtResource( 7 )

[node name="TextureRect3" type="TextureRect" parent="CookBook/Book/ClipController/HBoxContainer"]
margin_left = 456.0
margin_right = 672.0
margin_bottom = 200.0
texture = ExtResource( 9 )

[node name="TextureRect4" type="TextureRect" parent="CookBook/Book/ClipController/HBoxContainer"]
margin_left = 684.0
margin_right = 900.0
margin_bottom = 200.0
texture = ExtResource( 5 )

[node name="TextureRect5" type="TextureRect" parent="CookBook/Book/ClipController/HBoxContainer"]
margin_left = 912.0
margin_right = 1128.0
margin_bottom = 200.0
texture = ExtResource( 10 )

[node name="Page Flip Sound" type="AudioStreamPlayer" parent="CookBook/Book"]
stream = ExtResource( 1 )

[node name="Book Open" type="AudioStreamPlayer2D" parent="CookBook/Book"]
stream = ExtResource( 11 )
volume_db = 10.0

[node name="Book Close" type="AudioStreamPlayer2D" parent="CookBook/Book"]
stream = ExtResource( 12 )
volume_db = 10.0

[node name="Next" type="TextureButton" parent="CookBook"]
margin_left = -23.9999
margin_top = 272.0
margin_right = 436.0
margin_bottom = 732.0
rect_scale = Vector2( 0.0242169, 0.059021 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
texture_click_mask = ExtResource( 6 )

[node name="Previous" type="TextureButton" parent="CookBook"]
margin_left = -504.001
margin_top = 272.0
margin_right = -44.0012
margin_bottom = 732.0
rect_scale = Vector2( 0.0242169, 0.059021 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
texture_click_mask = ExtResource( 6 )
flip_h = true

[node name="Button" type="TextureButton" parent="CookBook"]
margin_left = 15.0
margin_top = 217.0
margin_right = 475.0
margin_bottom = 677.0
rect_scale = Vector2( 0.122216, 0.297864 )
texture_normal = ExtResource( 4 )
texture_click_mask = ExtResource( 6 )

[connection signal="pressed" from="CookBook/Next" to="CookBook" method="_on_Next_pressed"]
[connection signal="pressed" from="CookBook/Previous" to="CookBook" method="_on_Previous_pressed"]
[connection signal="pressed" from="CookBook/Button" to="CookBook" method="_on_Button_pressed"]
